stage4 -start